16 Apr 2020 [v1.2.5]
* upgrade xmlseclibs library (3.0.3+)

---------------------------------------------------------------------------------------------------------------------------------------------
12 Nov 2019 [v1.2.4]
* upgrade xmlseclibs library

---------------------------------------------------------------------------------------------------------------------------------------------
30 Jul 2019 [v1.2.3]
* Remove vulnerability in PHP iDIN Library

---------------------------------------------------------------------------------------------------------------------------------------------
15 July 2019
* Fix "The SamlResponse contains the name of the issuer which gives the response and is no longer exposed as “Acquirer” but as Issuer"
* InclusiveNamespaces is not taken into account when validating iDIN signature

---------------------------------------------------------------------------------------------------------------------------------------------
3 Iun 2019
* Fix: The attribute for electronic signing cannot be combined with other services in Php iDIN Libraries

---------------------------------------------------------------------------------------------------------------------------------------------
3 aug 2018
* Add Signing Service

---------------------------------------------------------------------------------------------------------------------------------------------
2 Apr 2018
* Remove loa2
* Consumer Initials: accept ligatures and digraphs
* Fix URL validation in PHP library

---------------------------------------------------------------------------------------------------------------------------------------------
2 Nov 2017
* Resolve "Problem with & from MerchantReturnURL"

---------------------------------------------------------------------------------------------------------------------------------------------
25 sept 2017
* adjust CA path
