@@ -1,1 +1,5 @@
 # iDIN-libraries-php
+
+How to run
+> composer install
+> docker-compose up
