@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
- <appSettings>
+  <appSettings>
     <add key="BankId.Merchant.MerchantID" value="" />
     <add key="BankId.Merchant.SubID" value="" />
     <add key="BankId.Merchant.ReturnUrl" value="" />
-    
+
     <add key="BankId.Acquirer.DirectoryUrl" value="" />
     <add key="BankId.Acquirer.TransactionUrl" value="" />
     <add key="BankId.Acquirer.StatusUrl" value="" />
 
-    
+
     <add key="BankId.Merchant.Certificate.File" value="" />
     <add key="BankId.Merchant.Certificate.Password" value="" />
     <add key="BankId.RoutingService.Certificate.File" value="" />
     <add key="BankId.RoutingService.Certificate.File.Alternative" value="" />
     <add key="BankId.SAML.Certificate.File" value="" />
     <add key="BankId.SAML.Certificate.Password" value="" />
-    
+
     <add key="BankId.Logs.Enabled" value="true" />
     <add key="BankId.Logs.Location" value="./Logs" />
     <add key="BankId.Logs.Pattern" value="%Y-%M-%D" />
