@@ -1,9 +1,0 @@
-browser.reload.on.save=true
-include.path=\
-    ${php.global.include.path}
-php.version=PHP_54
-source.encoding=UTF-8
-src.dir=.
-tags.asp=false
-tags.short=false
-web.root=.
